Changes to finalize the foreign memory access/linker APIs.